lazy loading implemented

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <div class="container-fluid">
                 <div class="d-flex justify-space-between align-center top-header">
                     <div class="logo d-flex justify-space-between align-center">
-                        <a href="/"><img src="./images/logo-sec.svg" alt="logo" title="Logo"></a>
+                        <a href="/"><img class="lazy" data-src="./images/logo-sec.svg" alt="logo" title="Logo"></a>
                     </div><!--logo-->
                     <nav class="navbar">
                         <ul class="d-flex">
@@ -74,7 +74,7 @@
         </header><!--site-header-->
         
         <section class="page-banner">
-            <img src="./images/trip1.jpg" alt="" title="">
+            <img class="lazy" data-src="./images/trip1.jpg" alt="" title="">
             <div class="content">
                 <h1 class="h1 text-white">About</h1>
                 <p class="p lg text-white">Wish a Trip</p>
@@ -115,7 +115,7 @@
                             <h5 class="h5">Address</h5>
                             <p>Una, Himachal Pradesh</p><br>
                             <a href="/" class="footer-logo">
-                                <img src="./images/footer-logo.svg" alt="logo" title="Logo">
+                                <img class="lazy" data-src="./images/footer-logo.svg" alt="logo" title="Logo">
                             </a>
                         </div><!--footer-item-->
                         <div class="footer-item">
