--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="container-fluid">
                 <div class="d-flex justify-space-between align-center top-header">
                     <div class="logo d-flex justify-space-between align-center">
-                        <a href="/"><img src="./images/logo-sec.svg" alt="logo" title="Logo"></a>
+                        <a href="/"><img class="lazy" data-src="./images/logo-sec.svg" alt="logo" title="Logo"></a>
                     </div><!--logo-->
                     <nav class="navbar">
                         <ul class="d-flex">
@@ -86,7 +86,7 @@
                 </div><!--video-sec-->
                 <div class="trip-wrapper">
                     <div class="trip-item">
-                        <img src="./images/trip1.jpg" alt="" title="">
+                        <img class="lazy" data-src="./images/trip1.jpg" alt="" title="">
                         <div class="content">
                             <h3 class="title">Jibhi Camps</h3>
                             <p class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -94,7 +94,7 @@
                         </div><!--content-->
                     </div><!--trip-item-->
                     <div class="trip-item">
-                        <img src="./images/trip2.jpg" alt="" title="">
+                        <img class="lazy" data-src="./images/trip2.jpg" alt="" title="">
                         <div class="content">
                             <h3 class="title">Kasol</h3>
                             <p class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -102,7 +102,7 @@
                         </div><!--content-->
                     </div><!--trip-item-->
                     <div class="trip-item">
-                        <img src="./images/trip3.jpg" alt="" title="">
+                        <img class="lazy" data-src="./images/trip3.jpg" alt="" title="">
                         <div class="content">
                             <h3 class="title">Ladakh</h3>
                             <p class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -110,7 +110,7 @@
                         </div><!--content-->
                     </div><!--trip-item-->
                     <div class="trip-item">
-                        <img src="./images/trip4.jpg" alt="" title="">
+                        <img class="lazy" data-src="./images/trip4.jpg" alt="" title="">
                         <div class="content">
                             <h3 class="title">Pushkar</h3>
                             <p class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -118,7 +118,7 @@
                         </div><!--content-->
                     </div><!--trip-item-->
                     <div class="trip-item">
-                        <img src="./images/trip1.jpg" alt="" title="">
+                        <img class="lazy" data-src="./images/trip1.jpg" alt="" title="">
                         <div class="content">
                             <h3 class="title">Jibhi Camps</h3>
                             <p class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -154,31 +154,31 @@
             <h2 class="h2 text-primary text-center">Our Trips</h2>
             <div class="two-column-wrap mt-40">
                 <a href="#" class="column overlay">
-                    <img src="./images/trip1.jpg" alt="" title="">
+                    <img class="lazy" data-src="./images/trip1.jpg" alt="" title="">
                     <h3 class="h3 overlay-content">Title</h3>
                 </a><!--grid-item-->
                 <a href="#" class="column overlay">
-                    <img src="./images/trip2.jpg" alt="" title="">
+                    <img class="lazy" data-src="./images/trip2.jpg" alt="" title="">
                     <h3 class="h3 overlay-content">Title</h3>
                 </a><!--grid-item-->
                 <a href="#" class="column overlay">
-                    <img src="./images/trip3.jpg" alt="" title="">
+                    <img class="lazy" data-src="./images/trip3.jpg" alt="" title="">
                     <h3 class="h3 overlay-content">Title</h3>
                 </a><!--grid-item-->
                 <a href="#" class="column overlay">
-                    <img src="./images/trip4.jpg" alt="" title="">
+                    <img class="lazy" data-src="./images/trip4.jpg" alt="" title="">
                     <h3 class="h3 overlay-content">Title</h3>
                 </a><!--grid-item-->
                 <a href="#" class="column overlay">
-                    <img src="./images/trip1.jpg" alt="" title="">
+                    <img class="lazy" data-src="./images/trip1.jpg" alt="" title="">
                     <h3 class="h3 overlay-content">Title</h3>
                 </a><!--grid-item-->
                 <a href="#" class="column overlay">
-                    <img src="./images/trip5.jpg" alt="" title="">
+                    <img class="lazy" data-src="./images/trip5.jpg" alt="" title="">
                     <h3 class="h3 overlay-content">Title</h3>
                 </a><!--grid-item-->
                 <a href="#" class="column overlay">
-                    <img src="./images/trip6.jpg" alt="" title="">
+                    <img class="lazy" data-src="./images/trip6.jpg" alt="" title="">
                     <h3 class="h3 overlay-content">Title</h3>
                 </a><!--grid-item-->
             </div><!--grid-wrapper-->
@@ -210,7 +210,7 @@
                             <h5 class="h5">Address</h5>
                             <p>Una, Himachal Pradesh</p><br>
                             <a href="/" class="footer-logo">
-                                <img src="./images/footer-logo.svg" alt="logo" title="Logo">
+                                <img class="lazy" data-src="./images/footer-logo.svg" alt="logo" title="Logo">
                             </a>
                         </div><!--footer-item-->
                         <div class="footer-item">
