contact us page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section class="home-banner">
             <div class="featured-section">
                 <div class="video-sec">
-                    <video autoplay muted loop id="myVideo">
+                    <video autoplay muted loop id="myVideo" poster="./images/trip4.jpg">
                         <source src="./images/banner-video.mp4" type="video/mp4">
                     </video>
                     <div class="content-section">
