--- a/contact.html
+++ b/contact.html
@@ -148,6 +148,9 @@
                 </div><!--copyright-sec-->
             </div><!--container-->
         </footer><!--site-footer-->
+        <div class="fbtn">
+            <button>Button</button>
+        </div><!--fbtn-->
     </div><!--content-->
    
     <script src="./js/main.js"></script>
