--- a/contact.html
+++ b/contact.html
@@ -148,6 +148,9 @@
                 </div><!--copyright-sec-->
             </div><!--container-->
         </footer><!--site-footer-->
+        <div class="textarea">
+            <textarea placeholder="enter text"></textarea>
+        </div>
         <div class="fbtn">
             <button>Button</button>
         </div><!--fbtn-->
